--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         {% if page.comments %}
         <div id="comments">
           <script src="https://utteranc.es/client.js"
-                  repo="your-username/your-repo"
+                  repo="animaegawa/animaegawa.github.io"
                   issue-term="pathname"
                   label="💬 コメント"
                   theme="github-light"
