--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,10 @@
       {% endif %}
     </title>
     <script src="{{ "/assets/js/mathjax-config.js" | relative_url }}"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"></script>
+    <!-- XyJax v3 -->
+    <script async src="https://cdn.jsdelivr.net/gh/sonoisa/XyJax-v3@master/xypic.js"></script>
+
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   </head>
   {%- include head.html -%}
