--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,6 +42,12 @@ blockquote {
   color: black;
 }
 
+.post-meta {
+  font-size: 0.85em;
+  color: #777;
+  margin-bottom: 1em;
+}
+
 
 // 共通のスタイル
 .theorem,
